# flow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOLT_REMOTE.md  LICENSE  README.md  VISION.md  manifest  mise.toml
.agents/plugins/: marketplace.json
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.flow/: .initialized  e2e-recipes.md  workspace.toml
.flow/tickets/: flow-014.md  flow-2jv.md  flow-5dh.md  flow-9bc.md  flow-p81.md  flow-t97.md
.github/workflows/: test.yml  version-stamp.yml
docs/: STATE.md
docs/research/: codebase-memory-mcp-trial-2026-07.md  cognitive-yield-burn-spike-2026-07.md  control-arm-recipe.md  novelty-survey-2026-06.md  xqt-counterfactual-verdict-2026-06.md  xqt-matched-pair-protocol.md
docs/specs/: 2026-07-12-codex-flow-facade-design.md  2026-07-12-flow-command-interface-v2-design.md  2026-07-13-flow-review-brief-design.md  2026-07-13-flow-review-brief-implementation-plan.md  2026-07-13-modular-agent-routing-design.md  2026-07-14-universal-cognitive-worker-routing-design.md  2026-07-17-observed-stabilization-run-design.md  2026-07-18-flow-simplification-map-design.md  2026-07-18-flow-stabilization-freeze-design.md  2026-07-20-driver-owned-planning-confidence-design.md  2026-07-21-codex-first-friction-fixes-design.md  2026-07-21-review-brief-readability-localization-design.md  2026-07-21-review-brief-typography-implementation-plan.md
docs/specs/assets/: flow-review-brief-concept.html  flow-review-brief-design-tokens.md
ops/: README.md  com.vdsmon.flow-epic.plist.template  com.vdsmon.flow-evolve.plist.template  loopctl.sh.template  nightly-evolve.sh.template  weekly-epic.sh.template
plugins/flow/.claude-plugin/: plugin.json
plugins/flow/.codex-plugin/: plugin.json
plugins/flow/hooks/: session-start.py
plugins/flow/hooks/tests/: test_session_start.py
plugins/flow/skills/bd/: SKILL.md
plugins/flow/skills/flow/: SKILL.md  public-commands.toml  stage-registry.toml
plugins/flow/skills/flow/references/: background-pipeline.md  command-maintain.md  command-measure.md  command-memory.md  command-target.md  command-ticket.md  command-workspace.md  control-arm-recipe.md  delivery-loop.md  delivery-plan.md  delivery-repair.md  delivery-revision.md  e2e-recipes.md  harness.md  loop-engineering.md  plan-surface.md  public-help.md  review-packet.md  revision-triage-board.md  robustness.md  self-evolution.md  stage-code_review.md  stage-commit.md  stage-create_pr.md  stage-e2e.md  stage-implement.md  stage-merge.md  stage-plan.md  stage-reflect.md  stage-review_brief.md  stage-review_loop.md  stage-ticket.md  troubleshooting.md  verb-do.md  verb-evolve.md  verb-group.md  verb-init.md  verb-new.md  verb-queue.md  verb-recall.md  (+9 more)
plugins/flow/skills/flow/scripts/: MODULE.md  _atomicio.py  _evolve_common.py  _gitreceipt.py  _jsonl.py  _memory_paths.py  _registry.py  _runner.py  _timeutil.py  _workspace.py  agent_routes.py  baseline_collect.py  bootstrap_journal.py  branch_ticket.py  bundle_discover.py  cockpit.py  cockpit_cli.py  cognitive_worker_prompts.json  cognitive_worker_smoke.py  cognitive_workers.py  compose_commit.py  create_pr.py  dev-history.md  diff_extract.py  dispatch_stage.py  embedder_fastembed.py  embedder_model2vec.py  evolve_drain.py  evolve_reap.py  evolve_select.py  evolve_self_merge.py  evolve_session_cleanup.py  fleet-race-matrix.md  fleet.py  flow_beads_create.py  flow_friction.py  flow_launcher.py  flow_worktree.py  flowctl.py  forge.py  (+76 more)
plugins/flow/skills/flow/scripts/assets/: review_brief.css
plugins/flow/skills/flow/scripts/tests/: friction_recurrence_corpus.json  test_agent_routes.py  test_atomicio.py  test_attachment_download.py  test_baseline_collect.py  test_beads_adapter.py  test_bootstrap_journal.py  test_branch_ticket.py  test_bundle_discover.py  test_cockpit.py  test_cockpit_cli.py  test_cognitive_worker_adapters.py  test_cognitive_worker_e2e.py  test_cognitive_worker_import.py  test_cognitive_worker_review_inputs.py  test_cognitive_worker_smoke.py  test_cognitive_workers.py  test_compose_commit.py  test_create_pr.py  test_cross_queue_memory.py  test_diff_extract.py  test_dispatch_revise.py  test_dispatch_stage.py  test_evolve_common.py  test_evolve_drain.py  test_evolve_reap.py  test_evolve_select.py  test_evolve_self_merge.py  test_evolve_session_cleanup.py  test_fleet.py  test_flow_beads_create.py  test_flow_friction.py  test_flow_launcher.py  test_flow_worktree.py  test_flowctl.py  test_forge.py  test_forge_bitbucket.py  test_forge_cli.py  test_forge_github.py  test_friction_escalate.py  (+86 more)
plugins/flow/skills/flow/scripts/ui-tests/: .gitignore  package-lock.json  package.json  playwright.config.mjs  render_fixture.py  review-brief.spec.mjs
plugins/flow/skills/flow/scripts/ui-tests/fixtures/: compact.json  full.json  portuguese.json
