# Not a runtime artifact. Configures ruff + ty over this scripts/ dir only.
# Runtime scripts are PEP 723 inline-deps uv scripts.

[project]
name = "flow-scripts"
version = "0"
description = "Lint + type-check config for plugins/flow/skills/flow/scripts/. Not a runtime package."
requires-python = ">=3.12"

[project.optional-dependencies]
# dev/test only: lets pytest.importorskip exercise the reference embedders locally.
# NOT the runtime mechanism — at runtime fastembed (default) / model2vec (alt)
# resolve inside the uvx subprocess (embedder_fastembed.py / embedder_model2vec.py),
# never in this env.
semantic = ["fastembed", "model2vec[inference]"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/_fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "C901", # mccabe complexity
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.analysis]
# pytest is a dev dep ty's env can't resolve; allow it so the gate surfaces
# real test-type errors instead of import noise. fastembed/model2vec are the
# optional `semantic` extra, imported ONLY inside the uvx-run reference embedders
# — never installed in this env by design, so ty can't resolve them either.
allowed-unresolved-imports = ["pytest", "fastembed", "model2vec"]

[tool.ty.src]
# Type-check the runtime engine and tests (scripts dir root). Default discovery
# walks the project root (this dir); `include = ["."]` matched nothing, so ty
# silently checked zero files. Only tests/_fixtures stays excluded: those are
# deliberately type-loose sample inputs.
exclude = ["tests/_fixtures"]

[[tool.ty.overrides]]
# Test fakes and fixture builders pass literal JSON-ish blobs; spelling
# dict[str, Any] on every helper is ceremony that catches nothing. The
# engine itself stays strict (lint runs ty with --error all).
include = ["tests/**"]

[tool.ty.overrides.rules]
missing-type-argument = "ignore"

[tool.coverage.run]
# measure the engine modules, not the test files (conftest lives under tests/).
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
